# backend/src/main/java/andrearepellini/phonebook/controller/AuthController.java
@@ -1,0 +1,54 @@
+package andrearepellini.phonebook.controller;
+
+import java.util.Map;
+
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RestController;
+
+import andrearepellini.phonebook.dto.request.AuthenticateUserRequest;
+import andrearepellini.phonebook.dto.request.RegisterUserRequest;
+import andrearepellini.phonebook.dto.response.LoginResponse;
+import andrearepellini.phonebook.dto.response.UserResponse;
+import andrearepellini.phonebook.service.AuthService;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
+import io.swagger.v3.oas.annotations.tags.Tag;
+import jakarta.validation.Valid;
+
+@RestController
+@RequestMapping("/api/auth")
+@Tag(name = "Auth", description = "User authentication APIs")
+public class AuthController {
+    private final AuthService authService;
+
+    public AuthController(AuthService authService) {
+        this.authService = authService;
+    }
+
+    @Operation(summary = "Register a new user", description = "Creates a new user account with the provided registration details")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "User successfully registered"),
+            @ApiResponse(responseCode = "400", description = "Invalid input or email already registered", content = @Content(schema = @Schema(implementation = Map.class)))
+    })
+    @PostMapping("/signup")
+    public ResponseEntity<UserResponse> registerUser(@Valid @RequestBody RegisterUserRequest request) {
+        return ResponseEntity.ok(authService.registerUser(request));
+    }
+
+    @Operation(summary = "Authenticate a user", description = "Authenticates a user using their credentials and returns a JWT token for access")
+    @ApiResponses(value = {
+            @ApiResponse(responseCode = "200", description = "Successfully authenticated"),
+            @ApiResponse(responseCode = "400", description = "Invalid input or user not registered", content = @Content(schema = @Schema(implementation = Map.class))),
+            @ApiResponse(responseCode = "401", description = "Invalid credentials", content = @Content(schema = @Schema(implementation = String.class)))
+    })
+    @PostMapping("/login")
+    public ResponseEntity<LoginResponse> authenticateUser(@Valid @RequestBody AuthenticateUserRequest request) {
+        return ResponseEntity.ok(authService.authenticateUser(request));
+    }
+}
