# backend/src/main/java/andrearepellini/phonebook/dto/request/AuthenticateUserRequest.java
@@ -1,0 +1,17 @@
+package andrearepellini.phonebook.dto.request;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import lombok.Data;
+import lombok.ToString;
+
+@Data
+@ToString(exclude = "password")
+public class AuthenticateUserRequest {
+    @NotBlank(message = "Email is required")
+    @Email(message = "Invalid email format")
+    private String email;
+
+    @NotBlank(message = "Password is required")
+    private String password;
+}
