# backend/src/main/java/andrearepellini/phonebook/dto/request/RegisterUserRequest.java
@@ -1,0 +1,19 @@
+package andrearepellini.phonebook.dto.request;
+
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.Size;
+import lombok.Data;
+import lombok.ToString;
+
+@Data
+@ToString(exclude = "password")
+public class RegisterUserRequest {
+    @NotBlank(message = "Email is required")
+    @Email(message = "Invalid email format")
+    private String email;
+
+    @NotBlank(message = "Password is required")
+    @Size(min = 8, message = "Password must be at least 8 characters")
+    private String password;
+}
