# schema/openapi.yaml
@@ -9,6 +9,8 @@ servers:
 tags:
 - name: Contacts
   description: Contact management APIs
+- name: Auth
+  description: User authentication APIs
 - name: Hello world
   description: Hello world test API
 paths:
@@ -61,7 +63,7 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/PagedModelContactDTO"
+                $ref: "#/components/schemas/PagedModelContactResponse"
     post:
       tags:
       - Contacts
@@ -80,7 +82,66 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ContactDTO"
+                $ref: "#/components/schemas/ContactResponse"
+  /api/auth/signup:
+    post:
+      tags:
+      - Auth
+      summary: Register a new user
+      description: Creates a new user account with the provided registration details
+      operationId: registerUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/RegisterUserRequest"
+        required: true
+      responses:
+        "200":
+          description: User successfully registered
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/UserResponse"
+        "400":
+          description: Invalid input or email already registered
+          content:
+            '*/*':
+              schema:
+                type: string
+  /api/auth/login:
+    post:
+      tags:
+      - Auth
+      summary: Authenticate a user
+      description: Authenticates a user using their credentials and returns a JWT
+        token for access
+      operationId: authenticateUser
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AuthenticateUserRequest"
+        required: true
+      responses:
+        "200":
+          description: Successfully authenticated
+          content:
+            '*/*':
+              schema:
+                $ref: "#/components/schemas/LoginResponse"
+        "400":
+          description: Invalid input or user not registered
+          content:
+            '*/*':
+              schema:
+                type: string
+        "401":
+          description: Invalid credentials
+          content:
+            '*/*':
+              schema:
+                type: string
   /api/contacts/{id}:
     get:
       tags:
@@ -101,13 +162,9 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ContactDTO"
+                $ref: "#/components/schemas/ContactResponse"
         "404":
           description: Contact not found
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/ContactDTO"
     patch:
       tags:
       - Contacts
@@ -133,13 +190,9 @@ paths:
           content:
             '*/*':
               schema:
-                $ref: "#/components/schemas/ContactDTO"
+                $ref: "#/components/schemas/ContactResponse"
         "404":
           description: Contact not found
-          content:
-            '*/*':
-              schema:
-                $ref: "#/components/schemas/ContactDTO"
   /api/helloworld:
     get:
       tags:
@@ -168,7 +221,7 @@ components:
         age:
           type: integer
           format: int32
-    ContactDTO:
+    ContactResponse:
       type: object
       properties:
         id:
@@ -187,6 +240,49 @@ components:
           format: int32
         deleted:
           type: boolean
+    RegisterUserRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          minLength: 1
+        password:
+          type: string
+          maxLength: 2147483647
+          minLength: 8
+      required:
+      - email
+      - password
+    UserResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        email:
+          type: string
+    AuthenticateUserRequest:
+      type: object
+      properties:
+        email:
+          type: string
+          format: email
+          minLength: 1
+        password:
+          type: string
+          minLength: 1
+      required:
+      - email
+      - password
+    LoginResponse:
+      type: object
+      properties:
+        token:
+          type: string
+        expiresIn:
+          type: integer
+          format: int64
     PatchContactRequest:
       type: object
       properties:
@@ -218,12 +314,12 @@ components:
         totalPages:
           type: integer
           format: int64
-    PagedModelContactDTO:
+    PagedModelContactResponse:
       type: object
       properties:
         content:
           type: array
           items:
-            $ref: "#/components/schemas/ContactDTO"
+            $ref: "#/components/schemas/ContactResponse"
         page:
           $ref: "#/components/schemas/PageMetadata"
